# 02476-mnist-cookiecutter

./: .docker-ci-config.yaml  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config_cpu.yaml  config_gpu.yaml  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: docker-ci.yml  tests.yml
dockerfiles/: trainer.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mnist-exercise/: __init__.py  predict_model.py  train_model.py
mnist-exercise/data/: make_dataset.py
mnist_exercise/: __init__.py  predict_model.py  train_model.py
mnist_exercise/data/: make_dataset.py
mnist_exercise/models/: model.py  train_model.py
tests/: test_data.py  test_model.py
