[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist-exercise"
version = "0.0.1"
description = "MNIST exercise"
authors = [
  { name = "Vitus", email = "vitusbt@gmail.com" },
]

readme = "README.md"
requires-python = "~=3.9.17"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["mnist-exercise"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.ruff]
line-length = 120
